# api/openapi.yaml
@@ -31,7 +31,7 @@ paths:
       tags:
       - Batch
       summary: "Read a batch of tickets by internal ID, or unique property values"
-      operationId: post-/crm/v3/objects/tickets/batch/read_read
+      operationId: postTickets/batch/read_read
       parameters:
       - name: archived
         in: query
@@ -84,7 +84,7 @@ paths:
         \ to the internal object ID by default, or optionally any unique property\
         \ value as specified by the `idProperty` query param.  Control what is returned\
         \ via the `properties` query param."
-      operationId: "get-/crm/v3/objects/tickets/{ticketId}_getById"
+      operationId: "getTickets/{ticketId}_getById"
       parameters:
       - name: ticketId
         in: path
@@ -173,7 +173,7 @@ paths:
       - Basic
       summary: Archive
       description: "Move an Object identified by `{ticketId}` to the recycling bin."
-      operationId: "delete-/crm/v3/objects/tickets/{ticketId}_archive"
+      operationId: "deleteTickets/{ticketId}_archive"
       parameters:
       - name: ticketId
         in: path
@@ -210,7 +210,7 @@ paths:
         \ Provided property values will be overwritten. Read-only and non-existent\
         \ properties will be ignored. Properties values can be cleared by passing\
         \ an empty string."
-      operationId: "patch-/crm/v3/objects/tickets/{ticketId}_update"
+      operationId: "patchTickets/{ticketId}_update"
       parameters:
       - name: ticketId
         in: path
@@ -260,7 +260,7 @@ paths:
       tags:
       - Public_Object
       summary: Merge two tickets with same type
-      operationId: post-/crm/v3/objects/tickets/merge_merge
+      operationId: postTickets/merge_merge
       parameters: []
       requestBody:
         content:
@@ -294,7 +294,7 @@ paths:
       tags:
       - Batch
       summary: Archive a batch of tickets by ID
-      operationId: post-/crm/v3/objects/tickets/batch/archive_archive
+      operationId: postTickets/batch/archive_archive
       parameters: []
       requestBody:
         content:
@@ -325,7 +325,7 @@ paths:
       tags:
       - Batch
       summary: Create a batch of tickets
-      operationId: post-/crm/v3/objects/tickets/batch/create_create
+      operationId: postTickets/batch/create_create
       parameters: []
       requestBody:
         content:
@@ -365,7 +365,7 @@ paths:
       tags:
       - Batch
       summary: Update a batch of tickets
-      operationId: post-/crm/v3/objects/tickets/batch/update_update
+      operationId: postTickets/batch/update_update
       parameters: []
       requestBody:
         content:
@@ -409,7 +409,7 @@ paths:
         \ GDPR. Use optional property 'idProperty' set to 'email' to identify contact\
         \ by email address. If email address is not found, the email address will\
         \ be added to a blocklist and prevent it from being used in the future."
-      operationId: post-/crm/v3/objects/tickets/gdpr-delete_purge
+      operationId: postTickets/gdpr-delete_purge
       parameters: []
       requestBody:
         content:
@@ -442,7 +442,7 @@ paths:
       summary: List
       description: Read a page of tickets. Control what is returned via the `properties`
         query param.
-      operationId: get-/crm/v3/objects/tickets_getPage
+      operationId: getTicketsGetPage
       parameters:
       - name: limit
         in: query
@@ -539,7 +539,7 @@ paths:
       description: "Create a ticket with the given properties and return a copy of\
         \ the object, including the ID. Documentation and examples for creating standard\
         \ tickets is provided."
-      operationId: post-/crm/v3/objects/tickets_create
+      operationId: postTickets_create
       parameters: []
       requestBody:
         content:
@@ -572,7 +572,7 @@ paths:
     post:
       tags:
       - Search
-      operationId: post-/crm/v3/objects/tickets/search_doSearch
+      operationId: postTickets/search_doSearch
       parameters: []
       requestBody:
         content:
